# winport-killer

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md
.vscode-extension/: LICENSE  package-lock.json  package.json  tsconfig.json
.vscode-extension/src/: apiClient.ts  extension.ts  sidecarManager.ts  types.ts  webviewProvider.ts
crates/winportkill-core/: Cargo.toml
crates/winportkill-core/src/: lib.rs  port.rs  process.rs
crates/winportkill-gui/: Cargo.toml
crates/winportkill-gui/src/: app.rs  main.rs
crates/winportkill-server/: Cargo.toml
crates/winportkill-server/src/: api.rs  lib.rs
docs/: egui-gui-guide.en.md  egui-gui-guide.md  egui-gui-guide.zh.md  jetbrains-plugin-guide.en.md  jetbrains-plugin-guide.zh.md  port-rs-guide.en.md  port-rs-guide.md  port-rs-guide.zh.md  project-architecture.en.md  project-architecture.zh.md  ratatui-guide.en.md  ratatui-guide.md  ratatui-guide.zh.md  server-mode-guide.en.md  server-mode-guide.md  server-mode-guide.zh.md  vscode-extension-guide.en.md  vscode-extension-guide.zh.md
examples/: mem_demo.rs
jetbrains-plugin/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
jetbrains-plugin/gradle/wrapper/: gradle-wrapper.properties
jetbrains-plugin/src/main/kotlin/dev/winportkill/jetbrains/api/: ApiClient.kt
jetbrains-plugin/src/main/kotlin/dev/winportkill/jetbrains/model/: Types.kt
jetbrains-plugin/src/main/kotlin/dev/winportkill/jetbrains/sidecar/: SidecarManager.kt
jetbrains-plugin/src/main/kotlin/dev/winportkill/jetbrains/toolwindow/: WinPortKillToolWindowFactory.kt
jetbrains-plugin/src/main/kotlin/dev/winportkill/jetbrains/ui/: WinPortKillPanel.kt
scripts/: prepare-release.sh
src/: app.rs  main.rs  port.rs  ui.rs
