[workspace]
members = [
    "crates/winportkill-core",
    "crates/winportkill-server",
    "crates/winportkill-gui",
    ".",  # TUI 主程序
]
resolver = "3"

[package]
name = "winportkill"
version = "0.1.0"
edition = "2024"

[dependencies]
winportkill-core = { path = "crates/winportkill-core" }
winportkill-server = { path = "crates/winportkill-server" }
ratatui = "0.30.0"
crossterm = "0.29.0"
figlet-rs = "1.0.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
axum = "0.8"