[package]
name = "winportkill-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.34"
serde = { version = "1", features = ["derive"] }
windows = { version = "0.59", features = [
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation",
    "Win32_System_Threading",
] }