[package]
name = "winportkill-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "winportkill-gui"
path = "src/main.rs"

[dependencies]
winportkill-core = { path = "../winportkill-core" }
eframe = { version = "0.34.2", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui_extras = { version = "0.34.2", default-features = false }
